--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "webpack-cli": "^3.3.12"
   },
   "devDependencies": {
-    "less": "^3.11.3"
+    "less": "^3.11.3",
+    "loader-utils": "^2.0.0"
   },
   "scripts": {
     "build": "webpack --config my-webpack/webpack.config.js"
